# serializer version: 1
# name: test_read_oxdna
  [32 33 30 31 31 31 32 31 31 30 30 31 30 33 33 32 33 31 32 33 31 30 33 31
   30 32 33 32 33 32 33 32 31 32 32 32 30 33 30 31 31 32 32 33 30 30 31 30
   31 33 33 31 31 31 33 31 30 31 32 30 31 32 33 31 32 33 31 31 33 32 31 32
   32 32 33 33 31 30 30 31 33 30 32 32 30 33 33 32 31 30 33 33 32 33 31 31
   33 33 30 30]
# ---
# name: test_read_oxdna.1
  [4 1 4 3 1 1 2 4 3 3 1 3 4 2 3 4 4 1 2 4 3 1 3 3 1 3 3 2 3 4 2 3 1 1 2 3 4
   2 4 4 1 4 2 3 3 3 1 1 4 4 2 1 3 3 2 3 4 2 2 2 1 2 2 1 3 3 3 3 3 3 1 4 1 2
   3 3 1 4 2 1 3 4 1 4 3 4 3 4 4 4 3 3 2 4 1 3 2 2 2 3]
# ---
# name: test_read_oxdna.10
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_read_oxdna.11
  AttributeError("The selected attribute 'sharp_face' does not exist on the mesh.")
# ---
# name: test_read_oxdna.12
  [32 32 30 30 31 31 33 31 31 30 33 32 32 33 31 30 33 30 31 31 31 33 31 30
   32 31 32 33 33 32 33 33 32 30 33 31 31 33 30 31 30 31 33 32 32 32 33 30
   31 31 31 32 32 33 33 33 32 30 32 33 31 32 30 31 31 32 33 31 32 33 31 31
   32 31 30 33 30 32 31 32 33 32 31 33 33 30 33 32 33 33 32 30 31 32 32 33
   32 31 31 33]
# ---
# name: test_read_oxdna.13
  [3 4 3 2 1 1 3 1 4 1 3 4 2 2 3 2 3 3 3 1 3 1 2 3 3 3 2 3 3 2 2 1 4 2 4 4 1
   1 3 3 4 1 4 3 4 4 2 4 3 4 2 2 4 2 4 2 4 1 2 1 1 4 4 1 1 2 3 4 4 2 1 3 2 3
   3 3 3 3 3 2 3 4 3 3 4 2 3 2 3 3 4 1 1 4 3 1 2 3 4 3]
# ---
# name: test_read_oxdna.14
  [[0.36 0.84 0.55 0.00]
   [0.80 0.24 0.17 1.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.80 0.27 0.53 1.00]
   [0.29 0.80 0.19 1.00]
   [0.36 0.55 0.84 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.80 0.24 0.17 1.00]
   [0.74 0.84 0.36 0.00]
   [0.80 0.27 0.53 1.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.29 0.80 0.19 1.00]
   [0.29 0.80 0.19 1.00]
   [0.36 0.84 0.55 0.00]
   [0.80 0.27 0.53 1.00]
   [0.29 0.80 0.19 1.00]
   [0.36 0.84 0.55 0.00]
   [0.80 0.24 0.17 1.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.80 0.27 0.53 1.00]
   [0.80 0.24 0.17 1.00]
   [0.74 0.84 0.36 0.00]
   [0.80 0.27 0.53 1.00]
   [0.29 0.80 0.19 1.00]
   [0.84 0.36 0.36 0.00]
   [0.80 0.27 0.53 1.00]
   [0.36 0.84 0.55 0.00]
   [0.29 0.80 0.19 1.00]
   [0.36 0.55 0.84 0.00]
   [0.29 0.80 0.19 1.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.80 0.24 0.17 1.00]
   [0.80 0.24 0.17 1.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.80 0.24 0.17 1.00]
   [0.80 0.24 0.17 1.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.80 0.24 0.17 1.00]
   [0.84 0.36 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.55 0.84 0.00]
   [0.29 0.80 0.19 1.00]
   [0.29 0.80 0.19 1.00]
   [0.80 0.24 0.17 1.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.80 0.24 0.17 1.00]
   [0.74 0.84 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.29 0.80 0.19 1.00]
   [0.80 0.24 0.17 1.00]
   [0.36 0.84 0.55 0.00]
   [0.27 0.55 0.80 1.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.80 0.24 0.17 1.00]
   [0.29 0.80 0.19 1.00]
   [0.80 0.24 0.17 1.00]
   [0.36 0.84 0.55 0.00]
   [0.80 0.24 0.17 1.00]
   [0.29 0.80 0.19 1.00]
   [0.80 0.27 0.53 1.00]
   [0.36 0.55 0.84 0.00]
   [0.27 0.55 0.80 1.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.80 0.27 0.53 1.00]
   [0.80 0.24 0.17 1.00]
   [0.84 0.36 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.80 0.27 0.53 1.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.29 0.80 0.19 1.00]
   [0.80 0.27 0.53 1.00]]
# ---
# name: test_read_oxdna.15
  [[-0.25  0.46  0.14]
   [-0.04  0.77 -0.06]
   [-0.15  0.68  0.08]
   [ 0.12  0.33  0.09]
   [-0.31  0.33  0.60]
   [-0.27  0.37  0.57]
   [-0.15  0.84 -0.31]
   [ 0.12  0.45  0.10]
   [-0.24  0.45  0.34]
   [-0.03  0.30 -0.03]
   [-0.08  0.77 -0.16]
   [-0.13  0.77 -0.02]
   [ 0.02  0.37  0.15]
   [-0.50  0.23  0.08]
   [-0.11  0.67 -0.11]
   [ 0.12  0.34  0.04]
   [-0.07  0.69  0.01]
   [-0.12  0.67  0.11]
   [-0.55  0.21  0.11]
   [-0.21  0.37  0.62]
   [-0.04  0.64 -0.08]
   [-0.07  0.28  0.07]
   [-0.41  0.23  0.06]
   [-0.21  0.28  0.13]
   [-0.16  0.51  0.13]
   [-0.12  0.66 -0.11]
   [ 0.02  0.34  0.10]
   [-0.09  0.94 -0.16]
   [-0.12  0.79 -0.17]
   [-0.13  0.39 -0.03]
   [-0.06  0.38  0.10]
   [-0.08  0.33  0.01]
   [-0.12  0.80 -0.07]
   [ 0.14  0.32  0.10]
   [-0.19  0.39  0.42]
   [-0.15  0.47  0.19]
   [ 0.09  0.49  0.13]
   [-0.07  0.28  0.01]
   [-0.34  0.38 -0.01]
   [-0.44  0.23 -0.01]
   [-0.17  0.57  0.02]
   [-0.16  0.34  0.04]
   [-0.14  0.59 -0.04]
   [-0.07  0.67  0.06]
   [-0.10  0.56  0.13]
   [-0.21  0.38  0.62]
   [-0.02  0.35  0.10]
   [-0.19  0.68 -0.06]
   [-0.07  0.63 -0.07]
   [-0.11  0.50  0.21]
   [ 0.08  0.32  0.13]
   [ 0.19  0.47  0.00]
   [-0.09  0.79 -0.12]
   [-0.52  0.33  0.04]
   [-0.13  0.36  0.46]
   [-0.19  0.27 -0.06]
   [-0.18  0.34  0.53]
   [-0.13  0.39  0.29]
   [ 0.18  0.42  0.02]
   [-0.07  0.30  0.04]
   [-0.15  0.28  0.10]
   [-0.14  0.44  0.58]
   [-0.13  0.57  0.07]
   [ 0.15  0.45  0.05]
   [ 0.19  0.42  0.12]
   [ 0.04  0.33  0.10]
   [-0.09  0.95 -0.25]
   [-0.10  0.58  0.24]
   [-0.16  0.75 -0.07]
   [-0.31  0.23  0.10]
   [ 0.19  0.47  0.12]
   [-0.55  0.18  0.04]
   [-0.15  0.30  0.03]
   [-0.12  0.71 -0.17]
   [-0.21  0.34  0.04]
   [-0.29  0.34  0.04]
   [-0.09  0.66  0.13]
   [-0.21  0.50  0.12]
   [-0.19  0.54  0.10]
   [ 0.17  0.41  0.07]
   [-0.30  0.40  0.07]
   [-0.19  0.40  0.46]
   [-0.52  0.18  0.10]
   [-0.11  0.81 -0.24]
   [-0.16  0.57 -0.04]
   [-0.36  0.22  0.10]
   [-0.21  0.64  0.19]
   [ 0.18  0.32  0.04]
   [-0.04  0.64 -0.01]
   [-0.14  0.65  0.12]
   [-0.12  0.72 -0.08]
   [-0.06  0.30 -0.04]
   [-0.11  0.26  0.06]
   [-0.06  0.55  0.11]
   [-0.19  0.47  0.17]
   [-0.09  0.33  0.07]
   [ 0.22  0.40 -0.02]
   [-0.24  0.58  0.18]
   [-0.10  0.51  0.16]
   [-0.15  0.63  0.13]]
# ---
# name: test_read_oxdna.16
  [[ 6.85e-02  5.62e-02  4.64e-02]
   [-3.60e-02 -5.88e-02 -7.24e-02]
   [-1.55e-02 -6.42e-02 -7.50e-02]
   [-4.02e-02  8.99e-02 -1.75e-02]
   [ 6.23e-02  7.82e-02 -1.78e-03]
   [ 9.67e-02  2.55e-02  1.28e-03]
   [ 4.06e-02  3.03e-02 -8.62e-02]
   [ 3.57e-02 -8.40e-02 -4.08e-02]
   [ 9.79e-02 -1.92e-02 -7.10e-03]
   [-1.83e-02  7.16e-02  6.74e-02]
   [ 9.18e-02 -4.79e-03  3.93e-02]
   [ 7.09e-02 -6.87e-02 -1.61e-02]
   [-5.76e-03  2.29e-02 -9.72e-02]
   [ 2.80e-02 -9.15e-02 -2.91e-02]
   [-2.55e-03  8.67e-02  4.97e-02]
   [-4.02e-02  8.99e-02 -1.75e-02]
   [-9.16e-02  1.12e-02 -3.86e-02]
   [-1.55e-02 -6.42e-02 -7.50e-02]
   [-1.58e-02  4.52e-02 -8.78e-02]
   [ 6.23e-02  7.82e-02 -1.78e-03]
   [-7.82e-02  6.23e-02  1.19e-03]
   [-1.82e-02  9.81e-02 -6.23e-03]
   [-3.89e-06 -3.22e-02 -9.47e-02]
   [ 6.50e-03 -1.46e-02 -9.87e-02]
   [ 9.27e-02  2.81e-02  2.50e-02]
   [-2.55e-03  8.67e-02  4.97e-02]
   [-5.76e-03  2.29e-02 -9.72e-02]
   [ 4.71e-02 -8.82e-02  2.63e-04]
   [ 9.18e-02 -4.79e-03  3.93e-02]
   [ 2.73e-02 -8.36e-02  4.75e-02]
   [ 1.24e-02 -7.53e-02 -6.47e-02]
   [-1.82e-02  9.81e-02 -6.23e-03]
   [ 2.46e-02 -7.98e-02 -5.50e-02]
   [-4.02e-02  8.99e-02 -1.75e-02]
   [ 5.69e-02  7.93e-02  2.16e-02]
   [-8.21e-02 -4.10e-02 -3.99e-02]
   [ 3.57e-02 -8.40e-02 -4.08e-02]
   [-1.82e-02  9.81e-02 -6.23e-03]
   [ 2.05e-02 -7.62e-02  6.15e-02]
   [-1.89e-02  6.96e-02  6.93e-02]
   [-1.36e-02  7.54e-02  6.42e-02]
   [-1.79e-02  1.99e-02 -9.64e-02]
   [ 3.84e-02  5.99e-02  7.03e-02]
   [-6.44e-02 -3.67e-02 -6.71e-02]
   [-9.58e-02  1.02e-02  2.70e-02]
   [-6.71e-02 -7.40e-02 -4.03e-03]
   [ 9.19e-03 -2.24e-02 -9.70e-02]
   [ 8.65e-02 -2.07e-02  4.57e-02]
   [-7.82e-02  6.23e-02  1.19e-03]
   [-8.21e-02 -4.10e-02 -3.99e-02]
   [-2.53e-02  6.98e-02 -6.70e-02]
   [-8.52e-03  5.93e-03  9.95e-02]
   [-3.60e-02 -5.88e-02 -7.24e-02]
   [ 2.80e-02 -9.15e-02 -2.91e-02]
   [-7.71e-02  6.23e-02  1.34e-02]
   [-8.20e-03  1.45e-02  9.86e-02]
   [-9.44e-02  3.25e-02 -5.04e-03]
   [-8.01e-02  5.99e-02  1.55e-03]
   [-3.86e-02  5.36e-02  7.51e-02]
   [-1.82e-02  9.81e-02 -6.23e-03]
   [-1.79e-02  1.99e-02 -9.64e-02]
   [-9.49e-02 -3.14e-02 -3.28e-03]
   [-7.67e-02  3.39e-02  5.45e-02]
   [ 4.15e-02 -3.75e-02 -8.29e-02]
   [ 9.95e-03  8.35e-03 -9.92e-02]
   [-5.76e-03  2.29e-02 -9.72e-02]
   [-1.77e-02 -6.72e-02  7.19e-02]
   [-8.21e-02 -4.10e-02 -3.99e-02]
   [ 7.09e-02 -6.87e-02 -1.61e-02]
   [-1.25e-02  8.11e-02 -5.71e-02]
   [ 9.95e-03  8.35e-03 -9.92e-02]
   [-1.58e-02  4.52e-02 -8.78e-02]
   [-5.00e-03 -3.27e-02  9.44e-02]
   [ 4.12e-02  6.68e-02  6.20e-02]
   [ 6.50e-03 -1.46e-02 -9.87e-02]
   [ 2.24e-02 -9.75e-02  4.68e-04]
   [-1.55e-02 -6.42e-02 -7.50e-02]
   [ 9.27e-02  2.81e-02  2.50e-02]
   [ 9.62e-02 -6.63e-03 -2.64e-02]
   [-3.86e-02  5.36e-02  7.51e-02]
   [ 2.24e-02 -9.75e-02  4.68e-04]
   [-7.69e-03  9.87e-02  1.38e-02]
   [-2.54e-02  9.20e-02 -2.99e-02]
   [ 4.06e-02  3.03e-02 -8.62e-02]
   [ 3.84e-02  5.99e-02  7.03e-02]
   [-1.94e-02  2.64e-02 -9.45e-02]
   [ 7.87e-02 -4.10e-02 -4.61e-02]
   [-4.54e-02  7.95e-02  4.02e-02]
   [-9.16e-02  1.12e-02 -3.86e-02]
   [ 1.75e-02 -5.23e-02 -8.34e-02]
   [ 7.09e-02 -6.87e-02 -1.61e-02]
   [-1.83e-02  7.16e-02  6.74e-02]
   [-2.83e-02  7.96e-02 -5.36e-02]
   [-9.58e-02  1.02e-02  2.70e-02]
   [ 6.85e-02  5.62e-02  4.64e-02]
   [-1.82e-02  9.81e-02 -6.23e-03]
   [-8.52e-03  5.93e-03  9.95e-02]
   [ 9.62e-02 -6.63e-03 -2.64e-02]
   [-9.77e-02 -1.92e-02 -9.48e-03]
   [ 1.75e-02 -5.23e-02 -8.34e-02]]
# ---
# name: test_read_oxdna.17
  [[-0.00  0.07 -0.08]
   [-0.07 -0.04  0.06]
   [ 0.05  0.06 -0.06]
   [-0.09 -0.04  0.01]
   [-0.00 -0.00 -0.10]
   [-0.00  0.01 -0.10]
   [ 0.03  0.09  0.04]
   [ 0.09  0.03  0.01]
   [-0.00 -0.04  0.09]
   [ 0.09  0.04 -0.02]
   [ 0.04  0.05 -0.08]
   [-0.06 -0.07  0.05]
   [-0.10 -0.02  0.00]
   [-0.10 -0.03 -0.01]
   [ 0.04  0.05 -0.08]
   [-0.09 -0.04  0.01]
   [ 0.04  0.05 -0.08]
   [ 0.05  0.06 -0.06]
   [ 0.10  0.03 -0.00]
   [-0.00 -0.00 -0.10]
   [ 0.03  0.05 -0.08]
   [ 0.10  0.02 -0.01]
   [-0.10 -0.01  0.00]
   [ 0.10  0.03  0.00]
   [-0.01  0.08 -0.06]
   [ 0.04  0.05 -0.08]
   [-0.10 -0.02  0.00]
   [ 0.07  0.04  0.07]
   [ 0.04  0.05 -0.08]
   [-0.09 -0.04 -0.03]
   [-0.10 -0.00 -0.01]
   [ 0.10  0.02 -0.01]
   [-0.07 -0.05  0.05]
   [-0.09 -0.04  0.01]
   [ 0.01 -0.03  0.09]
   [-0.02 -0.04  0.09]
   [ 0.09  0.03  0.01]
   [ 0.10  0.02 -0.01]
   [ 0.09  0.04  0.01]
   [ 0.08  0.05 -0.02]
   [-0.00 -0.07  0.08]
   [ 0.10  0.01 -0.02]
   [-0.00 -0.08  0.07]
   [ 0.05  0.04 -0.07]
   [ 0.02 -0.05  0.08]
   [-0.02  0.01  0.10]
   [-0.10 -0.00 -0.01]
   [-0.05 -0.06  0.07]
   [ 0.03  0.05 -0.08]
   [-0.02 -0.04  0.09]
   [-0.10 -0.03  0.01]
   [-0.09 -0.04 -0.01]
   [-0.07 -0.04  0.06]
   [-0.10 -0.03 -0.01]
   [ 0.02 -0.00  0.10]
   [-0.08 -0.06  0.00]
   [ 0.00  0.03  0.10]
   [ 0.00  0.00 -0.10]
   [-0.08 -0.06  0.01]
   [ 0.10  0.02 -0.01]
   [ 0.10  0.01 -0.02]
   [-0.01  0.01  0.10]
   [ 0.01 -0.08  0.06]
   [ 0.09  0.04  0.03]
   [ 0.09  0.04  0.01]
   [-0.10 -0.02  0.00]
   [ 0.06  0.05  0.06]
   [-0.02 -0.04  0.09]
   [-0.06 -0.07  0.05]
   [-0.09  0.01  0.03]
   [ 0.09  0.04  0.01]
   [ 0.10  0.03 -0.00]
   [-0.08 -0.05 -0.02]
   [ 0.03  0.06 -0.08]
   [ 0.10  0.03  0.00]
   [ 0.10  0.02  0.02]
   [ 0.05  0.06 -0.06]
   [-0.01  0.08 -0.06]
   [-0.01  0.08 -0.06]
   [-0.08 -0.06  0.01]
   [ 0.10  0.02  0.02]
   [ 0.01 -0.01  0.10]
   [ 0.10  0.03 -0.00]
   [ 0.03  0.09  0.04]
   [-0.00 -0.08  0.07]
   [-0.10  0.00  0.02]
   [ 0.01  0.08 -0.05]
   [-0.08 -0.05  0.01]
   [ 0.04  0.05 -0.08]
   [ 0.03  0.08 -0.04]
   [-0.06 -0.07  0.05]
   [ 0.09  0.04 -0.02]
   [ 0.10  0.03 -0.01]
   [ 0.02 -0.05  0.08]
   [-0.00  0.07 -0.08]
   [ 0.10  0.02 -0.01]
   [-0.09 -0.04 -0.01]
   [-0.01  0.08 -0.06]
   [ 0.00 -0.05  0.08]
   [ 0.03  0.08 -0.04]]
# ---
# name: test_read_oxdna.18
  [[-1.03e-02  5.96e-02  4.18e-03]
   [ 2.04e-03  1.53e-02  6.46e-02]
   [ 2.15e-02  1.89e-02  6.34e-03]
   [ 5.55e-02 -3.04e-02 -2.08e-02]
   [-1.05e-02  2.08e-02  1.11e-02]
   [ 2.13e-02  3.40e-02  8.28e-03]
   [-1.98e-02  1.25e-02  3.44e-02]
   [ 8.21e-03  4.73e-03 -4.03e-02]
   [ 1.91e-04  2.77e-02  3.55e-02]
   [-1.52e-02  2.08e-02  2.69e-02]
   [-1.56e-02 -5.07e-03  1.23e-02]
   [ 2.44e-02 -2.80e-02  3.29e-04]
   [-1.28e-02  8.62e-03  2.84e-02]
   [-5.41e-04  3.99e-02 -1.42e-02]
   [ 8.36e-03 -1.51e-02 -2.67e-02]
   [ 5.55e-02 -3.04e-02 -2.08e-02]
   [ 1.00e-02  1.13e-02 -1.50e-02]
   [ 2.15e-02  1.89e-02  6.34e-03]
   [ 1.36e-02  2.97e-02 -3.06e-02]
   [-1.05e-02  2.08e-02  1.11e-02]
   [-1.49e-02  3.71e-02  1.01e-02]
   [ 1.38e-02  4.21e-02  2.60e-02]
   [ 2.23e-02  1.53e-02  1.35e-02]
   [-4.72e-03 -9.13e-03 -3.00e-02]
   [ 2.93e-02  9.34e-04  1.73e-02]
   [ 8.36e-03 -1.51e-02 -2.67e-02]
   [-1.28e-02  8.62e-03  2.84e-02]
   [ 3.77e-02  2.86e-02 -1.42e-02]
   [-1.56e-02 -5.07e-03  1.23e-02]
   [-1.78e-03 -3.20e-02  3.82e-03]
   [ 2.94e-02  5.58e-03  1.33e-03]
   [ 1.38e-02  4.21e-02  2.60e-02]
   [-3.22e-02  3.33e-02 -1.99e-02]
   [ 5.55e-02 -3.04e-02 -2.08e-02]
   [ 2.96e-03  2.63e-02  2.31e-02]
   [-1.16e-02  3.26e-03  1.86e-03]
   [ 8.21e-03  4.73e-03 -4.03e-02]
   [ 1.38e-02  4.21e-02  2.60e-02]
   [-2.41e-02 -2.87e-02 -1.21e-02]
   [-1.71e-02  4.29e-03 -7.76e-02]
   [ 3.78e-02  2.68e-02  1.05e-01]
   [-4.76e-02  6.63e-02 -1.71e-02]
   [-2.80e-02 -6.69e-02  1.92e-03]
   [-4.92e-03  1.76e-02  4.44e-05]
   [ 1.35e-02 -1.68e-02 -1.75e-02]
   [ 9.52e-03  1.66e-02  1.26e-02]
   [ 9.86e-03  2.37e-02  1.68e-02]
   [-7.66e-03  4.01e-02  4.97e-04]
   [-1.49e-02  3.71e-02  1.01e-02]
   [-1.16e-02  3.26e-03  1.86e-03]
   [-3.11e-02 -7.35e-03 -1.99e-02]
   [-5.59e-02  4.78e-02  4.75e-02]
   [ 2.04e-03  1.53e-02  6.46e-02]
   [-5.41e-04  3.99e-02 -1.42e-02]
   [-1.94e-03 -9.58e-04 -1.03e-02]
   [ 3.21e-04  1.14e-02 -3.15e-02]
   [-3.59e-02 -3.07e-03  5.79e-03]
   [-2.49e-04 -2.25e-02  3.50e-02]
   [ 4.57e-03 -1.71e-02  1.30e-02]
   [ 1.38e-02  4.21e-02  2.60e-02]
   [-4.76e-02  6.63e-02 -1.71e-02]
   [ 1.84e-02 -8.57e-03 -5.40e-02]
   [ 3.14e-02  2.46e-02  1.66e-02]
   [-4.43e-02 -3.53e-02 -5.41e-02]
   [ 6.16e-02  4.20e-03  2.37e-02]
   [-1.28e-02  8.62e-03  2.84e-02]
   [ 1.55e-02 -6.97e-03  2.84e-02]
   [-1.16e-02  3.26e-03  1.86e-03]
   [ 2.44e-02 -2.80e-02  3.29e-04]
   [-3.30e-03 -5.24e-02  6.27e-03]
   [ 6.16e-02  4.20e-03  2.37e-02]
   [ 1.36e-02  2.97e-02 -3.06e-02]
   [ 1.66e-02  3.83e-02 -1.16e-03]
   [ 1.43e-02  3.65e-02 -1.19e-02]
   [-4.72e-03 -9.13e-03 -3.00e-02]
   [ 4.10e-03 -1.56e-02 -4.50e-02]
   [ 2.15e-02  1.89e-02  6.34e-03]
   [ 2.93e-02  9.34e-04  1.73e-02]
   [ 7.87e-04  2.68e-02  2.70e-02]
   [ 4.57e-03 -1.71e-02  1.30e-02]
   [ 4.10e-03 -1.56e-02 -4.50e-02]
   [ 2.02e-02 -5.17e-02  1.79e-02]
   [ 4.95e-02 -2.70e-02 -2.03e-02]
   [-1.98e-02  1.25e-02  3.44e-02]
   [-2.80e-02 -6.69e-02  1.92e-03]
   [-2.28e-02 -2.98e-02  5.46e-03]
   [ 1.92e-02  5.03e-02 -3.50e-02]
   [ 2.70e-03 -1.36e-02 -1.11e-03]
   [ 1.00e-02  1.13e-02 -1.50e-02]
   [ 7.12e-03  6.87e-02 -4.12e-02]
   [ 2.44e-02 -2.80e-02  3.29e-04]
   [-1.52e-02  2.08e-02  2.69e-02]
   [-1.42e-03  1.17e-02 -4.09e-02]
   [ 1.35e-02 -1.68e-02 -1.75e-02]
   [-1.03e-02  5.96e-02  4.18e-03]
   [ 1.38e-02  4.21e-02  2.60e-02]
   [-5.59e-02  4.78e-02  4.75e-02]
   [ 7.87e-04  2.68e-02  2.70e-02]
   [ 1.89e-03  9.02e-03  3.46e-02]
   [ 7.12e-03  6.87e-02 -4.12e-02]]
# ---
# name: test_read_oxdna.19
  [[ 0.09 -0.09 -0.05]
   [ 0.20  0.03  0.14]
   [ 0.45 -0.03 -0.17]
   [ 0.02 -0.60  0.40]
   [ 0.02  0.34  0.25]
   [-0.71 -0.02  0.03]
   [-0.34  0.04  0.53]
   [ 0.32  0.08  0.61]
   [ 0.25  0.53  0.44]
   [ 0.10 -0.22  0.59]
   [-0.31  0.55  0.08]
   [ 0.27  0.13 -0.10]
   [ 0.04  0.04  0.19]
   [-0.03 -0.34 -0.09]
   [-0.63  0.13 -0.60]
   [ 0.02 -0.60  0.40]
   [ 0.11  0.51 -0.03]
   [ 0.45 -0.03 -0.17]
   [ 0.47  0.08  0.07]
   [ 0.02  0.34  0.25]
   [ 0.13 -0.28  0.02]
   [-0.11  0.09  0.42]
   [ 0.22 -0.10  0.41]
   [ 0.69 -0.14  0.50]
   [-0.25 -0.01 -0.26]
   [-0.63  0.13 -0.60]
   [ 0.04  0.04  0.19]
   [-0.24 -0.06 -0.25]
   [-0.31  0.55  0.08]
   [ 0.11  0.13  0.25]
   [ 0.27  0.35  0.51]
   [-0.11  0.09  0.42]
   [-0.13 -0.13  0.33]
   [ 0.02 -0.60  0.40]
   [-0.02 -0.23  0.05]
   [-0.19 -0.07  0.01]
   [ 0.32  0.08  0.61]
   [-0.11  0.09  0.42]
   [-0.28  0.74  0.08]
   [-0.22 -0.06 -0.47]
   [-0.05 -0.47  0.52]
   [-0.54  0.02  0.05]
   [ 0.67 -0.42  0.38]
   [-0.60  0.08 -0.10]
   [ 0.01  0.25 -0.57]
   [ 0.02  0.31  0.00]
   [ 0.13  0.23  0.69]
   [ 0.11 -0.09 -0.17]
   [ 0.13 -0.28  0.02]
   [-0.19 -0.07  0.01]
   [-0.26 -0.38  0.22]
   [-0.29 -0.12 -0.10]
   [ 0.20  0.03  0.14]
   [-0.03 -0.34 -0.09]
   [-0.10  0.01  0.19]
   [ 0.12  0.37 -0.38]
   [-0.32 -0.33 -0.16]
   [ 0.21  0.23  0.32]
   [ 0.01  0.46 -0.07]
   [-0.11  0.09  0.42]
   [-0.54  0.02  0.05]
   [ 0.26  0.23  0.16]
   [ 0.10 -0.23  0.04]
   [ 0.02 -0.03  0.74]
   [ 0.12  0.77 -0.27]
   [ 0.04  0.04  0.19]
   [-0.29 -0.42 -0.34]
   [-0.19 -0.07  0.01]
   [ 0.27  0.13 -0.10]
   [ 0.25 -0.03 -0.35]
   [ 0.12  0.77 -0.27]
   [ 0.47  0.08  0.07]
   [ 0.05  0.22  0.36]
   [ 0.22 -0.34  0.47]
   [ 0.69 -0.14  0.50]
   [ 0.11 -0.53  0.18]
   [ 0.45 -0.03 -0.17]
   [-0.25 -0.01 -0.26]
   [-0.32  0.60  0.50]
   [ 0.01  0.46 -0.07]
   [ 0.11 -0.53  0.18]
   [ 0.36  0.30 -0.36]
   [ 0.21 -0.16  0.04]
   [-0.34  0.04  0.53]
   [ 0.67 -0.42  0.38]
   [-0.18 -0.40  0.09]
   [-0.08 -0.45 -0.00]
   [ 0.28 -0.41  0.19]
   [ 0.11  0.51 -0.03]
   [ 0.32 -0.17  0.05]
   [ 0.27  0.13 -0.10]
   [ 0.10 -0.22  0.59]
   [-0.10  0.47  0.37]
   [ 0.01  0.25 -0.57]
   [ 0.09 -0.09 -0.05]
   [-0.11  0.09  0.42]
   [-0.29 -0.12 -0.10]
   [-0.32  0.60  0.50]
   [-0.06  0.38  0.30]
   [ 0.32 -0.17  0.05]]
# ---
# name: test_read_oxdna.2
  [[0.36 0.55 0.84 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.84 0.36 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.55 0.84 0.00]
   [0.84 0.36 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.84 0.36 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.55 0.84 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.84 0.36 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.84 0.36 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.74 0.84 0.36 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.55 0.84 0.00]
   [0.36 0.84 0.55 0.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.55 0.84 0.00]
   [0.84 0.36 0.36 0.00]
   [0.36 0.84 0.55 0.00]
   [0.74 0.84 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.74 0.84 0.36 0.00]
   [0.36 0.84 0.55 0.00]]
# ---
# name: test_read_oxdna.20
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_read_oxdna.21
  [[1985 1986]
   [1386 1387]
   [2062 2066]
   [ 189  195]
   [1142 1146]
   [1902 1903]
   [ 507  508]
   [  24   25]
   [   6   12]
   [ 374  380]
   [1630 1631]
   [1422 1423]
   [1102 1106]
   [1895 1892]
   [1825 1826]
   [ 836  840]
   [ 692  693]
   [1922 1923]
   [  34   40]
   [ 552  553]
   [1154 1155]
   [2008 2009]
   [ 373  374]
   [1813 1814]
   [ 951  948]
   [1288 1289]
   [1292 1293]
   [1681 1682]
   [ 133  134]
   [ 352  353]
   [1359 1356]
   [1331 1328]
   [1729 1730]
   [2017 2018]
   [1809 1810]
   [ 523  524]
   [1631 1628]
   [2014 2015]
   [1486 1487]
   [1692 1693]
   [ 244  250]
   [2126 2127]
   [ 979  976]
   [ 734  738]
   [ 245  251]
   [ 807  811]
   [2005 2006]
   [ 939  936]
   [2016 2017]
   [ 461  456]
   [1035 1032]
   [ 132  133]
   [1882 1883]
   [ 369  370]
   [1734 1735]
   [1552 1553]
   [1994 1995]
   [ 612  616]
   [ 147  148]
   [  61   62]
   [1426 1427]
   [ 384  385]
   [2079 2083]
   [1608 1609]
   [ 804  805]
   [1149 1150]
   [2094 2095]
   [ 355  356]
   [1224 1225]
   [1390 1394]
   [1580 1581]
   [1726 1727]
   [2019 2016]
   [1195 1192]
   [  71   77]
   [1550 1551]
   [ 804  808]
   [ 485  491]
   [1460 1464]
   [ 992  993]
   [ 650  651]
   [ 795  792]
   [1429 1430]
   [ 237  238]
   [ 161  167]
   [1184 1185]
   [1671 1675]
   [1255 1252]
   [ 377  372]
   [ 226  227]
   [1479 1483]
   [ 533  528]
   [ 671  675]
   [1781 1785]
   [ 365  360]
   [ 855  859]
   [1141 1142]
   [ 564  570]
   [ 373  379]
   [1450 1451]]
# ---
# name: test_read_oxdna.22
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_read_oxdna.23
  [ True  True  True False  True  True False False False False  True  True
    True  True  True  True  True  True False False  True  True False  True
    True  True  True  True False False  True  True  True  True  True False
    True  True  True False  True  True  True False  True  True  True False
    True  True False  True  True  True  True False False  True False  True
    True  True  True  True False  True  True  True  True  True  True False
    True  True False  True  True  True  True  True False False  True  True
    True False False  True False  True  True False  True  True False False
    True False  True  True]
# ---
# name: test_read_oxdna.3
  [[-0.18  0.48  0.62]
   [-0.07  0.26  0.02]
   [-0.12  0.56  0.01]
   [-0.57  0.18  0.14]
   [-0.12  0.42  0.41]
   [-0.30  0.35  0.61]
   [ 0.18  0.35  0.06]
   [-0.20  0.61 -0.07]
   [-0.05  0.62 -0.07]
   [-0.21  0.28  0.15]
   [-0.27  0.50  0.51]
   [-0.49  0.15  0.06]
   [-0.05  0.57  0.06]
   [-0.20  0.27 -0.06]
   [-0.14  0.80 -0.33]
   [-0.29  0.34  0.33]
   [-0.23  0.31  0.38]
   [ 0.01  0.42 -0.05]
   [-0.15  0.32 -0.08]
   [-0.14  0.37  0.47]
   [-0.56  0.14  0.10]
   [-0.01  0.35 -0.06]
   [-0.07  0.83 -0.31]
   [-0.27  0.58  0.16]
   [-0.01  0.35 -0.04]
   [-0.05  0.64  0.08]
   [-0.14  0.78 -0.21]
   [-0.56  0.24 -0.05]
   [-0.08  0.96 -0.17]
   [-0.11  0.39  0.53]
   [-0.20  0.28 -0.04]
   [-0.42  0.28 -0.03]
   [-0.02  0.43 -0.03]
   [-0.10  0.41  0.33]
   [-0.20  0.20  0.01]
   [-0.04  0.66  0.08]
   [-0.08  0.55  0.07]
   [-0.17  0.25 -0.06]
   [-0.18  0.57  0.24]
   [-0.10  0.57  0.18]
   [-0.20  0.51  0.49]
   [-0.18  0.30  0.45]
   [-0.53  0.30 -0.02]
   [-0.06  0.89 -0.30]
   [-0.33  0.36 -0.00]
   [-0.11  0.66  0.12]
   [ 0.14  0.45  0.17]
   [-0.03  0.36 -0.08]
   [-0.06  0.57  0.19]
   [-0.29  0.50  0.30]
   [-0.19  0.26 -0.07]
   [ 0.10  0.46  0.11]
   [-0.53  0.14  0.13]
   [-0.26  0.35  0.13]
   [-0.18  0.27 -0.03]
   [-0.10  0.65 -0.14]
   [-0.10  0.56 -0.00]
   [-0.42  0.31  0.13]
   [ 0.23  0.36  0.01]
   [-0.27  0.21  0.05]
   [-0.28  0.44  0.55]
   [-0.13  0.31 -0.05]
   [-0.01  0.43  0.12]
   [-0.29  0.45  0.56]
   [-0.25  0.52  0.17]
   [-0.30  0.40  0.07]
   [-0.06  0.61 -0.06]
   [-0.10  0.68 -0.12]
   [-0.12  0.79 -0.15]
   [-0.45  0.29 -0.04]
   [ 0.20  0.41  0.17]
   [-0.11  0.38  0.54]
   [-0.20  0.36  0.24]
   [-0.16  0.40 -0.02]
   [-0.07  0.84 -0.32]
   [-0.10  0.84 -0.16]
   [-0.02  0.43 -0.05]
   [-0.08  0.59  0.06]
   [-0.33  0.29  0.13]
   [ 0.13  0.42  0.14]
   [-0.17  0.86 -0.22]
   [-0.06  0.58  0.05]
   [-0.12  0.42  0.33]
   [-0.07  0.86 -0.05]
   [-0.36  0.39  0.01]
   [-0.12  0.35  0.47]
   [-0.10  0.96 -0.27]
   [-0.17  0.33  0.42]
   [-0.23  0.54  0.30]
   [-0.06  0.55  0.06]
   [-0.15  0.80 -0.17]
   [-0.16  0.79 -0.36]
   [-0.15  0.32 -0.04]
   [-0.29  0.48  0.27]
   [-0.12  0.45  0.39]
   [-0.59  0.15  0.14]
   [-0.29  0.24  0.12]
   [-0.53  0.34  0.06]
   [ 0.14  0.33  0.10]
   [-0.11  0.69  0.11]]
# ---
# name: test_read_oxdna.4
  [[-6.71e-02 -7.40e-02 -4.03e-03]
   [-1.82e-02  9.81e-02 -6.23e-03]
   [-1.36e-02  7.54e-02  6.42e-02]
   [-1.34e-04  2.05e-03 -1.00e-01]
   [-8.99e-02 -3.47e-02 -2.69e-02]
   [ 6.23e-02  7.82e-02 -1.78e-03]
   [-4.54e-02  7.95e-02  4.02e-02]
   [ 7.68e-02  2.37e-02  5.95e-02]
   [-7.82e-02  6.23e-02  1.19e-03]
   [ 6.50e-03 -1.46e-02 -9.87e-02]
   [ 6.25e-02 -7.71e-02 -1.22e-02]
   [-2.54e-02  9.20e-02 -2.99e-02]
   [-7.67e-02  3.39e-02  5.45e-02]
   [-8.20e-03  1.45e-02  9.86e-02]
   [ 5.92e-03  9.98e-02  6.94e-04]
   [ 9.13e-02  3.50e-02  2.10e-02]
   [ 5.69e-02  7.93e-02  2.16e-02]
   [ 1.20e-02 -2.31e-02  9.65e-02]
   [-5.00e-03 -3.27e-02  9.44e-02]
   [-7.71e-02  6.23e-02  1.34e-02]
   [-1.58e-02  4.52e-02 -8.78e-02]
   [-4.21e-03  3.49e-02  9.36e-02]
   [-5.32e-02  7.67e-02  3.59e-02]
   [ 9.62e-02 -6.63e-03 -2.64e-02]
   [-4.21e-03  3.49e-02  9.36e-02]
   [-6.44e-02 -3.67e-02 -6.71e-02]
   [ 4.06e-02  3.03e-02 -8.62e-02]
   [ 2.90e-02 -6.13e-02  7.35e-02]
   [ 4.71e-02 -8.82e-02  2.63e-04]
   [-9.44e-02  3.25e-02 -5.04e-03]
   [-8.20e-03  1.45e-02  9.86e-02]
   [ 1.45e-02  9.46e-03  9.85e-02]
   [ 1.20e-02 -2.31e-02  9.65e-02]
   [-9.80e-02  1.59e-02 -1.16e-02]
   [-2.29e-02  7.36e-02  6.37e-02]
   [-6.44e-02 -3.67e-02 -6.71e-02]
   [-7.67e-02  3.39e-02  5.45e-02]
   [-8.20e-03  1.45e-02  9.86e-02]
   [-2.97e-02 -8.40e-02 -4.54e-02]
   [-9.77e-02 -1.92e-02 -9.48e-03]
   [ 2.61e-02 -9.64e-02 -4.91e-03]
   [-7.69e-03  9.87e-02  1.38e-02]
   [ 2.37e-02 -9.17e-02  3.22e-02]
   [-6.73e-02  2.34e-03  7.39e-02]
   [ 2.05e-02 -7.62e-02  6.15e-02]
   [-1.55e-02 -6.42e-02 -7.50e-02]
   [ 4.15e-02 -3.75e-02 -8.29e-02]
   [-4.21e-03  3.49e-02  9.36e-02]
   [-9.77e-02 -1.92e-02 -9.48e-03]
   [ 7.86e-02 -6.12e-02 -8.25e-03]
   [-8.20e-03  1.45e-02  9.86e-02]
   [ 3.57e-02 -8.40e-02 -4.08e-02]
   [-1.58e-02  4.52e-02 -8.78e-02]
   [ 2.91e-02 -6.01e-02 -7.44e-02]
   [-8.20e-03  1.45e-02  9.86e-02]
   [-2.55e-03  8.67e-02  4.97e-02]
   [-1.36e-02  7.54e-02  6.42e-02]
   [-3.89e-06 -3.22e-02 -9.47e-02]
   [-3.86e-02  5.36e-02  7.51e-02]
   [-1.80e-02  9.84e-02  7.48e-04]
   [ 9.32e-02 -3.50e-02 -9.15e-03]
   [-5.00e-03 -3.27e-02  9.44e-02]
   [ 9.19e-03 -2.24e-02 -9.70e-02]
   [ 9.32e-02 -3.50e-02 -9.15e-03]
   [ 9.27e-02  2.81e-02  2.50e-02]
   [ 2.24e-02 -9.75e-02  4.68e-04]
   [-7.82e-02  6.23e-02  1.19e-03]
   [-2.55e-03  8.67e-02  4.97e-02]
   [ 9.18e-02 -4.79e-03  3.93e-02]
   [ 1.45e-02  9.46e-03  9.85e-02]
   [ 9.95e-03  8.35e-03 -9.92e-02]
   [-9.44e-02  3.25e-02 -5.04e-03]
   [-1.95e-02  9.49e-02  2.49e-02]
   [ 2.73e-02 -8.36e-02  4.75e-02]
   [-5.32e-02  7.67e-02  3.59e-02]
   [ 6.26e-02 -7.79e-02 -2.85e-03]
   [ 1.20e-02 -2.31e-02  9.65e-02]
   [-7.67e-02  3.39e-02  5.45e-02]
   [-1.94e-02  2.64e-02 -9.45e-02]
   [ 4.15e-02 -3.75e-02 -8.29e-02]
   [ 5.33e-02  8.10e-02  2.45e-02]
   [-7.67e-02  3.39e-02  5.45e-02]
   [-9.80e-02  1.59e-02 -1.16e-02]
   [-3.60e-02 -5.88e-02 -7.24e-02]
   [ 2.05e-02 -7.62e-02  6.15e-02]
   [-7.71e-02  6.23e-02  1.34e-02]
   [-1.77e-02 -6.72e-02  7.19e-02]
   [-7.69e-03  9.87e-02  1.38e-02]
   [ 2.99e-02 -9.04e-02 -3.05e-02]
   [-7.67e-02  3.39e-02  5.45e-02]
   [ 9.18e-02 -4.79e-03  3.93e-02]
   [ 5.92e-03  9.98e-02  6.94e-04]
   [-5.00e-03 -3.27e-02  9.44e-02]
   [ 7.86e-02 -6.12e-02 -8.25e-03]
   [-8.99e-02 -3.47e-02 -2.69e-02]
   [-1.34e-04  2.05e-03 -1.00e-01]
   [-1.25e-02  8.11e-02 -5.71e-02]
   [ 2.80e-02 -9.15e-02 -2.91e-02]
   [-4.02e-02  8.99e-02 -1.75e-02]
   [-1.55e-02 -6.42e-02 -7.50e-02]]
# ---
# name: test_read_oxdna.5
  [[-0.02  0.01  0.10]
   [ 0.10  0.02 -0.01]
   [-0.00 -0.07  0.08]
   [ 0.09  0.05  0.00]
   [ 0.02  0.01 -0.10]
   [-0.00 -0.00 -0.10]
   [-0.08 -0.05  0.01]
   [-0.02 -0.08  0.06]
   [ 0.03  0.05 -0.08]
   [ 0.10  0.03  0.00]
   [ 0.01  0.02 -0.10]
   [ 0.10  0.03 -0.00]
   [ 0.01 -0.08  0.06]
   [-0.08 -0.06  0.00]
   [ 0.07 -0.00  0.07]
   [-0.00 -0.04  0.09]
   [ 0.01 -0.03  0.09]
   [ 0.09  0.04 -0.00]
   [-0.08 -0.05 -0.02]
   [ 0.02 -0.00  0.10]
   [ 0.10  0.03 -0.00]
   [ 0.09  0.05 -0.01]
   [ 0.07  0.02  0.07]
   [-0.01  0.08 -0.06]
   [ 0.09  0.05 -0.01]
   [ 0.05  0.04 -0.07]
   [ 0.03  0.09  0.04]
   [-0.09 -0.04 -0.00]
   [ 0.07  0.04  0.07]
   [ 0.00  0.03  0.10]
   [-0.08 -0.06  0.00]
   [ 0.09  0.05 -0.02]
   [ 0.09  0.04 -0.00]
   [ 0.01  0.01 -0.10]
   [-0.09 -0.04  0.01]
   [ 0.05  0.04 -0.07]
   [ 0.01 -0.08  0.06]
   [-0.08 -0.06  0.00]
   [-0.03 -0.04  0.09]
   [ 0.00 -0.05  0.08]
   [ 0.03  0.01 -0.09]
   [ 0.01 -0.01  0.10]
   [-0.10 -0.03 -0.00]
   [ 0.07  0.02  0.06]
   [ 0.09  0.04  0.01]
   [ 0.05  0.06 -0.06]
   [ 0.09  0.04  0.03]
   [ 0.09  0.05 -0.01]
   [ 0.00 -0.05  0.08]
   [-0.02 -0.04  0.09]
   [-0.08 -0.06  0.00]
   [ 0.09  0.03  0.01]
   [ 0.10  0.03 -0.00]
   [ 0.09  0.01  0.03]
   [-0.08 -0.06  0.00]
   [ 0.04  0.05 -0.08]
   [-0.00 -0.07  0.08]
   [-0.10 -0.01  0.00]
   [-0.08 -0.06  0.01]
   [-0.10 -0.02  0.02]
   [-0.00  0.02 -0.10]
   [-0.08 -0.05 -0.02]
   [-0.10 -0.00 -0.01]
   [-0.00  0.02 -0.10]
   [-0.01  0.08 -0.06]
   [ 0.10  0.02  0.02]
   [ 0.03  0.05 -0.08]
   [ 0.04  0.05 -0.08]
   [ 0.04  0.05 -0.08]
   [ 0.09  0.05 -0.02]
   [ 0.09  0.04  0.01]
   [ 0.00  0.03  0.10]
   [ 0.01  0.03 -0.10]
   [-0.09 -0.04 -0.03]
   [ 0.07  0.02  0.07]
   [ 0.06  0.05 -0.07]
   [ 0.09  0.04 -0.00]
   [ 0.01 -0.08  0.06]
   [-0.10  0.00  0.02]
   [ 0.09  0.04  0.03]
   [ 0.08 -0.05 -0.02]
   [ 0.01 -0.08  0.06]
   [ 0.01  0.01 -0.10]
   [-0.07 -0.04  0.06]
   [ 0.09  0.04  0.01]
   [ 0.02 -0.00  0.10]
   [ 0.06  0.05  0.06]
   [ 0.01 -0.01  0.10]
   [-0.02 -0.04  0.09]
   [ 0.01 -0.08  0.06]
   [ 0.04  0.05 -0.08]
   [ 0.07 -0.00  0.07]
   [-0.08 -0.05 -0.02]
   [-0.02 -0.04  0.09]
   [ 0.02  0.01 -0.10]
   [ 0.09  0.05  0.00]
   [-0.09  0.01  0.03]
   [-0.10 -0.03 -0.01]
   [-0.09 -0.04  0.01]
   [ 0.05  0.06 -0.06]]
# ---
# name: test_read_oxdna.6
  [[ 9.52e-03  1.66e-02  1.26e-02]
   [ 1.38e-02  4.21e-02  2.60e-02]
   [ 3.78e-02  2.68e-02  1.05e-01]
   [ 1.76e-02 -1.13e-02  5.34e-03]
   [ 3.27e-02 -4.98e-02  1.55e-02]
   [-1.05e-02  2.08e-02  1.11e-02]
   [ 2.70e-03 -1.36e-02 -1.11e-03]
   [-1.05e-02 -6.80e-02  4.52e-03]
   [-1.49e-02  3.71e-02  1.01e-02]
   [-4.72e-03 -9.13e-03 -3.00e-02]
   [ 5.27e-02  2.61e-02 -1.11e-02]
   [ 4.95e-02 -2.70e-02 -2.03e-02]
   [ 3.14e-02  2.46e-02  1.66e-02]
   [ 3.21e-04  1.14e-02 -3.15e-02]
   [ 1.05e-02  2.44e-02  2.99e-03]
   [-5.55e-03 -7.83e-03  2.16e-03]
   [ 2.96e-03  2.63e-02  2.31e-02]
   [-6.12e-03  1.76e-02  1.57e-03]
   [ 1.66e-02  3.83e-02 -1.16e-03]
   [-1.94e-03 -9.58e-04 -1.03e-02]
   [ 1.36e-02  2.97e-02 -3.06e-02]
   [ 5.45e-02  2.66e-02 -1.61e-03]
   [ 4.84e-02 -5.31e-03 -1.53e-02]
   [ 7.87e-04  2.68e-02  2.70e-02]
   [ 5.45e-02  2.66e-02 -1.61e-03]
   [-4.92e-03  1.76e-02  4.44e-05]
   [-1.98e-02  1.25e-02  3.44e-02]
   [ 5.17e-03 -2.52e-02 -9.81e-03]
   [ 3.77e-02  2.86e-02 -1.42e-02]
   [-3.59e-02 -3.07e-03  5.79e-03]
   [ 3.21e-04  1.14e-02 -3.15e-02]
   [ 5.94e-03  1.91e-02  4.22e-02]
   [-6.12e-03  1.76e-02  1.57e-03]
   [-2.21e-02 -1.86e-02  6.85e-02]
   [ 7.21e-02 -2.98e-02 -1.75e-02]
   [-4.92e-03  1.76e-02  4.44e-05]
   [ 3.14e-02  2.46e-02  1.66e-02]
   [ 3.21e-04  1.14e-02 -3.15e-02]
   [-7.33e-02  1.27e-02 -2.15e-02]
   [ 1.89e-03  9.02e-03  3.46e-02]
   [-5.70e-04  3.90e-03 -1.70e-02]
   [ 2.02e-02 -5.17e-02  1.79e-02]
   [ 3.03e-02  1.92e-02 -2.05e-04]
   [ 1.67e-02  5.70e-04  6.37e-02]
   [-2.41e-02 -2.87e-02 -1.21e-02]
   [ 2.15e-02  1.89e-02  6.34e-03]
   [-4.43e-02 -3.53e-02 -5.41e-02]
   [ 5.45e-02  2.66e-02 -1.61e-03]
   [ 1.89e-03  9.02e-03  3.46e-02]
   [-1.27e-02 -1.33e-02 -3.69e-02]
   [ 3.21e-04  1.14e-02 -3.15e-02]
   [ 8.21e-03  4.73e-03 -4.03e-02]
   [ 1.36e-02  2.97e-02 -3.06e-02]
   [-2.29e-02  2.30e-02  1.62e-02]
   [ 3.21e-04  1.14e-02 -3.15e-02]
   [ 8.36e-03 -1.51e-02 -2.67e-02]
   [ 3.78e-02  2.68e-02  1.05e-01]
   [ 2.23e-02  1.53e-02  1.35e-02]
   [ 4.57e-03 -1.71e-02  1.30e-02]
   [ 6.34e-02  3.81e-02  5.38e-02]
   [-3.86e-02 -9.36e-03 -3.13e-02]
   [ 1.66e-02  3.83e-02 -1.16e-03]
   [ 9.86e-03  2.37e-02  1.68e-02]
   [-3.86e-02 -9.36e-03 -3.13e-02]
   [ 2.93e-02  9.34e-04  1.73e-02]
   [ 4.10e-03 -1.56e-02 -4.50e-02]
   [-1.49e-02  3.71e-02  1.01e-02]
   [ 8.36e-03 -1.51e-02 -2.67e-02]
   [-1.56e-02 -5.07e-03  1.23e-02]
   [ 5.94e-03  1.91e-02  4.22e-02]
   [ 6.16e-02  4.20e-03  2.37e-02]
   [-3.59e-02 -3.07e-03  5.79e-03]
   [ 1.67e-02 -3.59e-02 -1.78e-02]
   [-1.78e-03 -3.20e-02  3.82e-03]
   [ 4.84e-02 -5.31e-03 -1.53e-02]
   [-1.49e-02  3.41e-02  4.00e-02]
   [-6.12e-03  1.76e-02  1.57e-03]
   [ 3.14e-02  2.46e-02  1.66e-02]
   [-2.28e-02 -2.98e-02  5.46e-03]
   [-4.43e-02 -3.53e-02 -5.41e-02]
   [-1.10e-02 -1.76e-02 -1.03e-02]
   [ 3.14e-02  2.46e-02  1.66e-02]
   [-2.21e-02 -1.86e-02  6.85e-02]
   [ 2.04e-03  1.53e-02  6.46e-02]
   [-2.41e-02 -2.87e-02 -1.21e-02]
   [-1.94e-03 -9.58e-04 -1.03e-02]
   [ 1.55e-02 -6.97e-03  2.84e-02]
   [ 2.02e-02 -5.17e-02  1.79e-02]
   [-2.07e-02  1.07e-02  4.40e-02]
   [ 3.14e-02  2.46e-02  1.66e-02]
   [-1.56e-02 -5.07e-03  1.23e-02]
   [ 1.05e-02  2.44e-02  2.99e-03]
   [ 1.66e-02  3.83e-02 -1.16e-03]
   [-1.27e-02 -1.33e-02 -3.69e-02]
   [ 3.27e-02 -4.98e-02  1.55e-02]
   [ 1.76e-02 -1.13e-02  5.34e-03]
   [-3.30e-03 -5.24e-02  6.27e-03]
   [-5.41e-04  3.99e-02 -1.42e-02]
   [ 5.55e-02 -3.04e-02 -2.08e-02]
   [ 2.15e-02  1.89e-02  6.34e-03]]
# ---
# name: test_read_oxdna.7
  [[ 0.02  0.31  0.00]
   [-0.11  0.09  0.42]
   [-0.05 -0.47  0.52]
   [-0.17  0.07  0.20]
   [-0.05  0.09  0.28]
   [ 0.02  0.34  0.25]
   [ 0.28 -0.41  0.19]
   [-0.15  0.38  0.03]
   [ 0.13 -0.28  0.02]
   [ 0.69 -0.14  0.50]
   [-0.44 -0.16 -1.07]
   [ 0.21 -0.16  0.04]
   [ 0.10 -0.23  0.04]
   [ 0.12  0.37 -0.38]
   [ 0.19 -0.31  0.40]
   [-0.02 -0.02  0.38]
   [-0.02 -0.23  0.05]
   [ 0.11  0.18  0.17]
   [ 0.05  0.22  0.36]
   [-0.10  0.01  0.19]
   [ 0.47  0.08  0.07]
   [ 0.17 -0.20  0.37]
   [ 0.46 -0.35 -0.23]
   [-0.32  0.60  0.50]
   [ 0.17 -0.20  0.37]
   [-0.60  0.08 -0.10]
   [-0.34  0.04  0.53]
   [ 0.28 -0.41  0.38]
   [-0.24 -0.06 -0.25]
   [-0.32 -0.33 -0.16]
   [ 0.12  0.37 -0.38]
   [ 0.07 -0.16 -0.00]
   [ 0.11  0.18  0.17]
   [ 0.32 -0.22 -0.10]
   [ 0.27 -0.15  0.08]
   [-0.60  0.08 -0.10]
   [ 0.10 -0.23  0.04]
   [ 0.12  0.37 -0.38]
   [ 0.06  0.10  0.45]
   [-0.06  0.38  0.30]
   [-0.45  0.10 -0.07]
   [ 0.36  0.30 -0.36]
   [ 0.20  0.27 -0.04]
   [ 0.39 -0.35  0.03]
   [-0.28  0.74  0.08]
   [ 0.45 -0.03 -0.17]
   [ 0.02 -0.03  0.74]
   [ 0.17 -0.20  0.37]
   [-0.06  0.38  0.30]
   [ 0.01 -0.14 -0.70]
   [ 0.12  0.37 -0.38]
   [ 0.32  0.08  0.61]
   [ 0.47  0.08  0.07]
   [-0.06 -0.05  0.17]
   [ 0.12  0.37 -0.38]
   [-0.63  0.13 -0.60]
   [-0.05 -0.47  0.52]
   [ 0.22 -0.10  0.41]
   [ 0.01  0.46 -0.07]
   [-0.42  0.06  0.05]
   [ 0.06 -0.36 -0.13]
   [ 0.05  0.22  0.36]
   [ 0.13  0.23  0.69]
   [ 0.06 -0.36 -0.13]
   [-0.25 -0.01 -0.26]
   [ 0.11 -0.53  0.18]
   [ 0.13 -0.28  0.02]
   [-0.63  0.13 -0.60]
   [-0.31  0.55  0.08]
   [ 0.07 -0.16 -0.00]
   [ 0.12  0.77 -0.27]
   [-0.32 -0.33 -0.16]
   [-0.82  0.64 -0.17]
   [ 0.11  0.13  0.25]
   [ 0.46 -0.35 -0.23]
   [-0.02  0.11 -0.24]
   [ 0.11  0.18  0.17]
   [ 0.10 -0.23  0.04]
   [-0.18 -0.40  0.09]
   [ 0.02 -0.03  0.74]
   [-0.07  0.19  0.23]
   [ 0.10 -0.23  0.04]
   [ 0.32 -0.22 -0.10]
   [ 0.20  0.03  0.14]
   [-0.28  0.74  0.08]
   [-0.10  0.01  0.19]
   [-0.29 -0.42 -0.34]
   [ 0.36  0.30 -0.36]
   [-0.34  0.01 -0.01]
   [ 0.10 -0.23  0.04]
   [-0.31  0.55  0.08]
   [ 0.19 -0.31  0.40]
   [ 0.05  0.22  0.36]
   [ 0.01 -0.14 -0.70]
   [-0.05  0.09  0.28]
   [-0.17  0.07  0.20]
   [ 0.25 -0.03 -0.35]
   [-0.03 -0.34 -0.09]
   [ 0.02 -0.60  0.40]
   [ 0.45 -0.03 -0.17]]
# ---
# name: test_read_oxdna.8
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_read_oxdna.9
  [[ 39  40]
   [550 556]
   [378 384]
   [ 75  81]
   [  0   6]
   [247 253]
   [495 501]
   [326 327]
   [352 358]
   [ 14  20]
   [331 337]
   [473 479]
   [153 154]
   [409 410]
   [538 539]
   [540 541]
   [ 66  67]
   [143 138]
   [569 564]
   [426 432]
   [ 54  55]
   [431 426]
   [365 371]
   [ 64  65]
   [303 304]
   [401 396]
   [260 261]
   [558 564]
   [151 152]
   [374 380]
   [ 73  74]
   [ 58  64]
   [159 160]
   [300 301]
   [568 574]
   [144 145]
   [490 491]
   [467 462]
   [ 98 104]
   [302 303]
   [249 250]
   [442 443]
   [351 357]
   [293 288]
   [118 119]
   [ 57  58]
   [460 461]
   [511 512]
   [155 150]
   [113 108]
   [271 277]
   [447 453]
   [149 144]
   [339 340]
   [532 538]
   [204 205]
   [151 157]
   [177 178]
   [505 506]
   [ 25  31]
   [134 135]
   [160 166]
   [ 79  85]
   [329 335]
   [578 579]
   [369 375]
   [329 324]
   [334 335]
   [516 517]
   [359 354]
   [350 356]
   [138 144]
   [467 473]
   [ 35  41]
   [233 239]
   [428 429]
   [376 377]
   [ 70  71]
   [510 516]
   [250 251]
   [ 56  57]
   [570 576]
   [457 463]
   [340 341]
   [ 30  31]
   [494 495]
   [435 436]
   [501 507]
   [339 345]
   [399 400]
   [ 49  50]
   [141 142]
   [432 438]
   [511 517]
   [580 586]
   [196 202]
   [ 97 103]
   [537 538]
   [126 127]
   [262 263]]
# ---
